crates/evaluator/src/snapshots/kclvm_evaluator__tests__function_stmt_0.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run_as_function().to_string())"
---
"bar"
