crates/evaluator/src/snapshots/kclvm_evaluator__tests__if_stmt_6.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
b: 1
c: 1
