crates/evaluator/src/snapshots/kclvm_evaluator__tests__if_stmt_8.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
items:
- key2: value2
c:
  items:
  - key2: value2
