crates/evaluator/src/snapshots/kclvm_evaluator__tests__import_stmt_2.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
v: null
x: true
