crates/evaluator/src/snapshots/kclvm_evaluator__tests__lambda_4.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
x: 6
