crates/evaluator/src/snapshots/kclvm_evaluator__tests__lambda_6.snap
---
source: evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
my_dict:
  my_field: 1
  x: 2
