crates/evaluator/src/snapshots/kclvm_evaluator__tests__lazy_scope_0.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
b: 3
a: 1
c: 2
