crates/evaluator/src/snapshots/kclvm_evaluator__tests__literal_1.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
a:
  k: v
b: '{"k": "v"}'
