crates/evaluator/src/snapshots/kclvm_evaluator__tests__literal_2.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
a: 1048576.0
b: 2000.0
