crates/evaluator/src/snapshots/kclvm_evaluator__tests__loop_0.snap
---
source: evaluator/src/tests.rs
expression: "format!(\"{}\", evaluator.run().unwrap().1)"
---
a:
- 1
- 4
- 9
